# mtm

./: .gitignore  CMakeLists.txt  helloworld.c
Collab/: Shelly.c
Python/: helloworld.py
Vika/: CMakeLists.txt  election.c  election.h
ex1/dry_exercise/: exercise1_2_1.c
ex1/submission/: area.h  election.c  exUtilities.c  exUtilities.h  makefile  nodeKeyValue.c
ex1/wet_exercise/: CMakeLists.txt  area.c  election.c  election_utilities.c  election_utilities.h  exutilities.c  exutilities.h  macro.h  makefile  node_key_value.c  nodekeyvalue.c  nodekeyvalue.h  utilities.h
ex1/wet_exercise/mtm_map/: NodeKeyValue.c  map.c  node_key_value.c  node_key_value.h  utilities.c
ex1/wet_exercise/tests/: shai_test.c  shai_test_election.c  tempTests.c  test_map_from_group.c
ex2/: Olympics.i  hw2.py  input.txt  temp_scrambled.txt  temp_test.out  temp_test.txt
ex3/: Auxiliaries.cpp  CMakeLists.txt  IntMatrix.c  IntMatrix.cpp  IntMatrix.h  Tester.out  dependencies.csv  matrix.out  mor.out  partc.out  shai.out  shai10.out  shai11.out  shai2.out  shai3.out  shai4.out  shai5.out  shai6.out  shai7.out  temp.txt  test1.out  testc.out  tester.cpp
ex3/partA/: Auxiliaries.cpp  CMakeLists.txt  IntMatrix.cpp  IntMatrix.h  temp.cpp  test_partA.cpp  tester.cpp
ex3/partB/: Auxiliaries.h  CMakeLists.txt  Exceptions.cpp  Exceptions.h  IntMatrix.h  Matrix.cpp  Matrix.h  MatrixTester.cpp  mor.h  test_partB.cpp
ex3/partC/: Character.cpp  Character.h  EmptyCell.h  Exceptions.h  Game.cpp  Game.h  GameTest.cpp  Matrix.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  test_partC.cpp  test_partC_output
mtm/ex1/: CMakeLists.txt  exercise1.c  exercise1_2_1.c  exercise1_2_2_buggy.c  shelly.c
mtm/ex1/dry_exercise/: exercise1_2_1.c  shelly.c
mtm/ex1/wet_exercise/: CMakeLists.txt  election.h  election_utilities.h  elections.cpp  map.c  utilities.c  utilities.h
mtm/ex1/wet_exercise/mtm_election/: area.c  area.h  election.c  electionUtils.c  electionUtils.h  election_utilities.c  election_utilities.h
mtm/ex1/wet_exercise/mtm_map/: map.c
mtm/ex1/wet_exercise/tests/: shai_test.c  shai_test_election.c
